// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`features/classification/Classification should render a classified badge with advisory message in tooltip 1`] = `
<article
  className="bdl-Classification "
>
  <ClassifiedBadge
    name="Confidential"
    tooltipText="fubar"
  />
</article>
`;

exports[`features/classification/Classification should render a classified badge with an inline advisory message 1`] = `
<article
  className="bdl-Classification "
>
  <ClassifiedBadge
    name="Confidential"
  />
  <p
    className="bdl-Classification-advisoryMessage"
  >
    fubar
  </p>
</article>
`;

exports[`features/classification/Classification should render a classified badge with no advisory message 1`] = `
<article
  className="bdl-Classification "
>
  <ClassifiedBadge
    name="Confidential"
  />
</article>
`;

exports[`features/classification/Classification should render add classification badge 1`] = `
<article
  className="bdl-Classification "
>
  <AddClassificationBadge />
</article>
`;

exports[`features/classification/Classification should render not classified message 1`] = `
<article
  className="bdl-Classification "
>
  <span
    className="bdl-Classification-missingMessage"
  >
    <FormattedMessage
      defaultMessage="Not classified"
      id="boxui.classification.missing"
    />
  </span>
</article>
`;
